--- a/web/src/index.html
+++ b/web/src/index.html
@@ -17,6 +17,11 @@
   <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
   <link rel="manifest" href="/manifest.json">
 </head>
+<style>
+  body {
+    background-color: #1a1a1a;
+  }
+</style>
 <body>
 
   <app-root></app-root>
